--- a/app.jade
+++ b/app.jade
@@ -2,7 +2,7 @@
 html(lang='en', ng-app='appmodule', ng-controller='appCtr')
   head
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
+    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1', user-scalable='0')
     meta(name="apple-mobile-web-app-capable", content="yes")
     
     title Fdbk
@@ -34,7 +34,7 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
               li(ng-class='{selected : current_page == "user_settings"}')
                 a(href='#/settings', ng-click='toggleSidebar()')
                   i.icon-cog
-                  | Settings
+                  | Profile
               li(ng-class='{selected : current_page == "user_bonuses"}')
                 a(href='#/rewards', ng-click='toggleSidebar()')
                   i.icon-trophy
