--- a/jade_partials/campaign.html.jade
+++ b/jade_partials/campaign.html.jade
@@ -5,7 +5,7 @@ header.app_header(ng-class='{no_bottom : campaignNav_true}')
     h2 @
       span(ng-bind='campaignHandle')
     h1(ng-bind='campaignTitle')
-  button.btn.icon.right(ng-click='toggleNavbar()', ng-switch='currentPage')
+  button.btn.icon.right(ng-click='toggleNavbar()', ng-switch='currentPage', ng-hide='multipleViewCampaigns')
     i.icon-down-open.sup
     i.icon-pencil(ng-switch-when='/edit')
     i.icon-chat(ng-switch-when='/conversations')
@@ -15,24 +15,24 @@ header.app_header(ng-class='{no_bottom : campaignNav_true}')
 .dimmer(ng-if='campaignNav_true',ng-click='toggleNavbar(false)', ng-class='{dropdown_dimmer : campaignNav_true}')
 nav.campaign_nav.dropdown(ng-if='campaignNav_true', ng-click='toggleNavbar()')
   ul
-    li.feed(ng-hide='currentPage == "/conversations"')
+    li.feed
       a(href='#/account/{{accountId}}/campaign/{{campaignId}}/conversations')
         | Conversation Feed
         i.icon-chat
-    li.analytics(ng-hide='currentPage == "/analytics"')
+    li.analytics
       a(href='#/account/{{accountId}}/campaign/{{campaignId}}/analytics')
         | Analytics
         i.icon-chart-bar
-    li.edit(ng-hide='multipleViewCampaigns || currentPage == "/edit"')
-      a(href='#/account/{{accountId}}/campaign/{{campaignId}}/edit')
-        | Edit
-        i.icon-pencil
-    li.bonuses(ng-hide='currentPage == "/rewards"')
+    li.bonuses
       a(href='#/account/{{accountId}}/campaign/{{campaignId}}/rewards')
         | Bonuses
         i.icon-trophy
-    li.contacts(ng-hide='currentPage == "/contacts"')
+    li.contacts
       a(href='#/account/{{accountId}}/campaign/{{campaignId}}/contacts')
         | Contacts
         i.icon-at
+    li.edit
+      a(href='#/account/{{accountId}}/campaign/{{campaignId}}/edit')
+        | Edit
+        i.icon-pencils
 ui-view.campaign_view.fade
