--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -5,16 +5,16 @@
     <h2>@<span ng-bind="campaignHandle"></span></h2>
     <h1 ng-bind="campaignTitle"></h1>
   </hgroup>
-  <button ng-click="toggleNavbar()" ng-switch="currentPage" class="btn icon right"><i class="icon-down-open sup"></i><i ng-switch-when="/edit" class="icon-pencil"></i><i ng-switch-when="/conversations" class="icon-chat"></i><i ng-switch-when="/analytics" class="icon-chart-bar"></i><i ng-switch-when="/rewards" class="icon-trophy"></i><i ng-switch-when="/contacts" class="icon-at"></i></button>
+  <button ng-click="toggleNavbar()" ng-switch="currentPage" ng-hide="multipleViewCampaigns" class="btn icon right"><i class="icon-down-open sup"></i><i ng-switch-when="/edit" class="icon-pencil"></i><i ng-switch-when="/conversations" class="icon-chat"></i><i ng-switch-when="/analytics" class="icon-chart-bar"></i><i ng-switch-when="/rewards" class="icon-trophy"></i><i ng-switch-when="/contacts" class="icon-at"></i></button>
 </header>
 <div ng-if="campaignNav_true" ng-click="toggleNavbar(false)" ng-class="{dropdown_dimmer : campaignNav_true}" class="dimmer"></div>
 <nav ng-if="campaignNav_true" ng-click="toggleNavbar()" class="campaign_nav dropdown">
   <ul>
-    <li ng-hide="currentPage == &quot;/conversations&quot;" class="feed"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
-    <li ng-hide="currentPage == &quot;/analytics&quot;" class="analytics"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
-    <li ng-hide="multipleViewCampaigns || currentPage == &quot;/edit&quot;" class="edit"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">Edit<i class="icon-pencil"></i></a></li>
-    <li ng-hide="currentPage == &quot;/rewards&quot;" class="bonuses"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">Bonuses<i class="icon-trophy"></i></a></li>
-    <li ng-hide="currentPage == &quot;/contacts&quot;" class="contacts"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">Contacts<i class="icon-at"></i></a></li>
+    <li class="feed"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
+    <li class="analytics"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
+    <li class="bonuses"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">Bonuses<i class="icon-trophy"></i></a></li>
+    <li class="contacts"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">Contacts<i class="icon-at"></i></a></li>
+    <li class="edit"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">Edit<i class="icon-pencils"></i></a></li>
   </ul>
 </nav>
 <ui-view class="campaign_view fade"></ui-view>
