--- a/partials/campaign_rewards.html
+++ b/partials/campaign_rewards.html
@@ -5,7 +5,7 @@
     <input type="text" ng-model="search_query.$" placeholder="search names or secret codes"/>
     <ul class="object-list">
       <li ng-repeat="reward in viewCampaign.rewards | filter:search_query" class="object-item">
-        <button ng-click="claimReward(reward)" ng-class="{claimed: reward.date_claimed != false}" class="push_right btn">redeem</button><a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
+        <button ng-click="claimReward(reward)" ng-class="{claimed: reward.date_claimed != false}" class="btn">redeem</button><a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
           <h1 ng-bind="reward.title"></h1>
           <dl>
             <dt>Owner:</dt>
