--- a/partials/form.html
+++ b/partials/form.html
@@ -1,59 +1,55 @@
+
 <div class="scroller_wrapper">
   <div class="scroller">
     <h1 ng-bind="fdbkCampaign.title"></h1>
     <form action="">
       <ol>
-        <li ng-repeat="question in fdbkCampaign.questionsList">
-          <!--Start 'Multiple Choice' Template-->
+        <li ng-repeat="question in fdbkCampaign.questionsList"><!--
+          <Start>'Multiple Choice' Template</Start>-->
           <div ng-show="question.type == 'multipleChoice'">
             <h3 ng-bind="question.text">Multiple-Choice</h3>
-            <ul class='answers'>
+            <ul class="answers">
               <li ng-repeat="answer in question.answers" class="inline">
-                <input type="radio" name="answer_{{question.id}}" id="answer_{{question.id}}{{answer.id}}" />
+                <input id="answer_"/>
                 <label for="answer_{{question.id}}{{answer.id}}" ng-bind="answer.text"></label>
               </li>
             </ul>
-          </div>
-          <!--End 'Multiple Choice' Template-->
-          
-          <!--Start 'rating' Template-->
+          </div><!--
+          <End>'Multiple Choice' Template</End>--><!--
+          <Start>'rating' Template</Start>-->
           <div ng-show="question.type == 'rating'">
             <h3 ng-bind="question.text"></h3>
-            <ul class='answers'>
+            <ul class="answers">
               <li ng-repeat="answer in question.answers" class="inline">
-                <input type="radio" name="answer_{{question.id}}" id="answer_{{question.id}}{{answer.id}}" />
+                <input id="answer_"/>
                 <label for="answer_{{question.id}}{{answer.id}}" ng-bind="answer.text"></label>
               </li>
             </ul>
-          </div>
-          <!--End 'rating' Template-->
-          
-          <!--Start 'freeText' Template-->
+          </div><!--
+          <End>'rating' Template</End>--><!--
+          <Start>'freeText' Template</Start>-->
           <div ng-show="question.type == 'freeText'">
             <h3 ng-bind="question.text"></h3>
             <input type="text" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="add an answer here."/>
-          </div>
-          <!--End 'freeText' Template-->
-          
-          <!--Start 'binary' Template-->
+          </div><!--
+          <End>'freeText' Template</End>--><!--
+          <Start>'binary' Template</Start>-->
           <div ng-show="question.type == 'binary'">
             <h3 ng-bind="question.text"></h3>
-            <ul class='answers'>
+            <ul class="answers">
               <li ng-repeat="answer in question.answers" class="inline">
-                <input type="radio" name="answer_{{question.id}}" id="answer_{{question.id}}{{answer.id}}" />
+                <input id="answer_"/>
                 <label for="answer_{{question.id}}{{answer.id}}" ng-bind="answer.text"></label>
               </li>
             </ul>
-          </div>
-          <!--End 'binary' Template-->
-          
-          <!--Start 'number' Template-->
+          </div><!--
+          <End>'binary' Template</End>--><!--
+          <Start>'number' Template</Start>-->
           <div ng-show="question.type == 'number'">
             <h3 ng-bind="question.text"></h3>
             <input type="number" name="answer_{{question.id}}{{answer.id}}" ng-model="answer.text" placeholder="type your answer here."/>
-          </div>
-          <!--End 'number' Template-->
-          
+          </div><!--
+          <End>'number' Template</End>-->
         </li>
       </ol>
       <fieldset class="padded">
